syntax = "proto3";
package server;

enum MsgType {
  LOGIN_REQ = 0;
  LOGIN_RESP = 10;
  LOGOUT_REQ = 1;
  LOGOUT_RESP = 11;
  PUNCH_REQ = 2;
  PUNCH_RESP = 12;
}

message MsgHeader {
  MsgType type = 1;
}

// login
message LoginReq{
  string Name = 1;
}

message LoginResp{
  int32 Result = 1;
  string Msg = 2;
  int64 ID = 3;
}

// logout
message LogoutReq {
  int64 ID = 1;
}

message LogoutResp {
  int32 Result = 1;
  string Msg = 2;
}

// punch
message PunchReq {
  int64 ID = 1;
  int64 TargetID = 2;
}